--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a href="tel:+2250704868888">+225 07 04 86 88 88</a>
                 </div>
                 <div class="mobile-menu-social">
-                    <a href="https://www.instagram.com/lacanteen_abj/" target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/lacanteen.abj/" target="_blank">Instagram</a>
                 </div>
             </div>
         </div>
@@ -242,27 +242,28 @@
                     Des saveurs qui<br>
                     <em>font revenir</em>
                 </h2>
+                <p class="menu-subtitle">Tous nos plats sont préparés avec des produits frais et servis avec amour</p>
             </div>
         </div>
 
         <div class="menu-tabs-wrapper">
             <div class="container">
                 <div class="menu-tabs">
-                    <button class="menu-tab active" data-tab="signatures">
+                    <button class="menu-tab active" data-tab="cantinieres">
                         <span class="tab-number">01</span>
-                        <span class="tab-text">Signatures</span>
+                        <span class="tab-text">Cantinières</span>
                     </button>
-                    <button class="menu-tab" data-tab="steaks">
+                    <button class="menu-tab" data-tab="sandwichs">
                         <span class="tab-number">02</span>
-                        <span class="tab-text">Steaks</span>
+                        <span class="tab-text">Sandwichs</span>
                     </button>
-                    <button class="menu-tab" data-tab="autres">
+                    <button class="menu-tab" data-tab="supplements">
                         <span class="tab-number">03</span>
-                        <span class="tab-text">Autres Plats</span>
+                        <span class="tab-text">Suppléments</span>
                     </button>
-                    <button class="menu-tab" data-tab="accompagnements">
+                    <button class="menu-tab" data-tab="boissons">
                         <span class="tab-number">04</span>
-                        <span class="tab-text">Accompagnements</span>
+                        <span class="tab-text">Boissons & Desserts</span>
                     </button>
                 </div>
             </div>
@@ -270,160 +271,173 @@
 
         <div class="menu-content">
             <div class="container">
-                <!-- Signatures -->
-                <div class="menu-panel active" id="signatures">
+                <!-- Cantinières -->
+                <div class="menu-panel active" id="cantinieres">
                     <div class="menu-panel-header">
-                        <h3>Nos Signatures <em>— Le Must</em></h3>
-                        <p>Les incontournables de La Canteen, servis avec nos frites maison</p>
+                        <h3>Les Cantinières <em>— Nos Signatures</em></h3>
+                        <p>Servis avec une sauce au choix* et des frites maison</p>
+                        <div class="sauce-badge">
+                            <span class="sauce-title">Nos sauces</span>
+                            <span class="sauce-list">Poivre • Entrecôte • Champignon • Roquefort</span>
+                        </div>
                     </div>
                     <div class="menu-list">
                         <div class="menu-item highlight">
                             <div class="menu-item-content">
-                                <h4>L'Entrecôte La Canteen</h4>
-                                <p>Notre pièce signature, cuisson parfaite, sauce maison</p>
+                                <h4>Entrecôte Frites</h4>
+                                <p>Entrecôte, servi avec une sauce au choix* et des frites maison</p>
+                                <span class="menu-item-badge">Best-seller</span>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                            <div class="menu-item-price">17 000<span>F</span></div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-content">
-                                <h4>Le Saumon Grillé</h4>
-                                <p>Filet de saumon, sauce maison unique, frites croustillantes</p>
+                                <h4>Saumon Frites</h4>
+                                <p>Pavé de saumon grillé, servi avec une sauce au choix* et des frites maison</p>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                            <div class="menu-item-price">16 000<span>F</span></div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-content">
-                                <h4>Le Poulet Frit</h4>
-                                <p>Croustillant à l'extérieur, tendre à l'intérieur</p>
+                                <h4>Picanha Frites</h4>
+                                <p>Picanha, servi avec une sauce au choix* et des frites maison</p>
+                                <span class="menu-item-badge">Premium</span>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                            <div class="menu-item-price">15 500<span>F</span></div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-content">
-                                <h4>L'Entre-Dog</h4>
-                                <p>Notre hot-dog revisité façon La Canteen</p>
+                                <h4>Steak Frites</h4>
+                                <p>250g de filet de bœuf émincé, servi avec une sauce au choix* et des frites maison</p>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                            <div class="menu-item-price">12 500<span>F</span></div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-content">
-                                <h4>Les Nuggets Maison</h4>
-                                <p>Préparés avec amour, accompagnés de nos frites</p>
+                                <h4>Poulet Frites</h4>
+                                <p>250g de blanc de poulet émincé, servi avec une sauce au choix* et des frites maison</p>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                            <div class="menu-item-price">11 500<span>F</span></div>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-item-content">
+                                <h4>Saucière</h4>
+                                <p>Frites maison servi avec une sauce au choix*</p>
+                            </div>
+                            <div class="menu-item-price">6 000<span>F</span></div>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-item-content">
+                                <h4>Nuggets Frites</h4>
+                                <p>5 pièces de nuggets, servies avec des frites maison et du ketchup</p>
+                                <span class="menu-item-badge">Kids friendly</span>
+                            </div>
+                            <div class="menu-item-price">4 500<span>F</span></div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Steaks -->
-                <div class="menu-panel" id="steaks">
+                <!-- Sandwichs -->
+                <div class="menu-panel" id="sandwichs">
                     <div class="menu-panel-header">
-                        <h3>Nos Steaks <em>— Cuisson Parfaite</em></h3>
-                        <p>Viandes sélectionnées, cuisson à la demande</p>
+                        <h3>Les Sandwichs <em>— Généreux</em></h3>
+                        <p>Servis avec des frites maison et une sauce au choix*</p>
                     </div>
                     <div class="menu-list">
                         <div class="menu-item highlight">
                             <div class="menu-item-content">
-                                <h4>Entrecôte</h4>
-                                <p>La pièce noble par excellence</p>
+                                <h4>Steakosaure</h4>
+                                <p>150g de filet de bœuf, servi avec des frites maison et une sauce au choix*</p>
+                                <span class="menu-item-badge">Copieux</span>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                            <div class="menu-item-price">9 000<span>F</span></div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-content">
-                                <h4>Faux-Filet</h4>
-                                <p>Tendre et savoureux</p>
+                                <h4>Poulette</h4>
+                                <p>150g de blanc de poulet, servi avec des frites maison et une sauce au choix*</p>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
-                        </div>
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Bavette</h4>
-                                <p>Pour les amateurs de goût prononcé</p>
-                            </div>
-                            <div class="menu-item-price">--<span>F</span></div>
-                        </div>
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Filet de Boeuf</h4>
-                                <p>La tendreté absolue</p>
-                            </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                            <div class="menu-item-price">8 500<span>F</span></div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Autres Plats -->
-                <div class="menu-panel" id="autres">
+                <!-- Suppléments -->
+                <div class="menu-panel" id="supplements">
                     <div class="menu-panel-header">
-                        <h3>Autres Délices <em>— Variété</em></h3>
-                        <p>Pour ceux qui veulent explorer</p>
+                        <h3>Les Suppléments <em>— Pour aller plus loin</em></h3>
+                        <p>Ajoutez une touche supplémentaire à votre repas</p>
                     </div>
-                    <div class="menu-list">
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Saumon Grillé</h4>
-                                <p>Filet de saumon, sauce signature</p>
-                            </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                    <div class="menu-list menu-list-grid">
+                        <div class="menu-item-compact">
+                            <span class="item-name">Frites</span>
+                            <span class="item-price">2 500<small>F</small></span>
                         </div>
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Poulet Frit Croustillant</h4>
-                                <p>Notre recette secrète</p>
-                            </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                        <div class="menu-item-compact">
+                            <span class="item-name">Bœuf</span>
+                            <span class="item-price">3 500<small>F</small></span>
                         </div>
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Wings</h4>
-                                <p>Ailes de poulet épicées ou nature</p>
-                            </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                        <div class="menu-item-compact">
+                            <span class="item-name">Poulet</span>
+                            <span class="item-price">3 000<small>F</small></span>
                         </div>
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Le Duo Foodie</h4>
-                                <p>Pour partager entre amis</p>
-                            </div>
-                            <div class="menu-item-price">--<span>F</span></div>
+                        <div class="menu-item-compact">
+                            <span class="item-name">Riz</span>
+                            <span class="item-price">1 000<small>F</small></span>
+                        </div>
+                        <div class="menu-item-compact">
+                            <span class="item-name">Sauce 150ml</span>
+                            <span class="item-price">3 500<small>F</small></span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Accompagnements -->
-                <div class="menu-panel" id="accompagnements">
+                <!-- Boissons & Desserts -->
+                <div class="menu-panel" id="boissons">
                     <div class="menu-panel-header">
-                        <h3>Accompagnements <em>— Les Essentiels</em></h3>
-                        <p>Pour compléter votre repas</p>
+                        <h3>Boissons & Desserts <em>— Pour accompagner</em></h3>
+                        <p>Rafraîchissements et douceurs</p>
                     </div>
-                    <div class="menu-list">
-                        <div class="menu-item highlight">
-                            <div class="menu-item-content">
-                                <h4>Frites Maison</h4>
-                                <p>Croustillantes, dorées, irrésistibles</p>
+                    <div class="menu-columns">
+                        <div class="menu-column">
+                            <h4 class="menu-column-title">Boissons</h4>
+                            <div class="menu-list-simple">
+                                <div class="menu-item-simple">
+                                    <span>Boissons gazeuses</span>
+                                    <span>1 500<small>F</small></span>
+                                </div>
+                                <div class="menu-item-simple">
+                                    <span>Ice Tea</span>
+                                    <span>2 000<small>F</small></span>
+                                </div>
+                                <div class="menu-item-simple">
+                                    <span>Eau 0,5L</span>
+                                    <span>1 000<small>F</small></span>
+                                </div>
+                                <div class="menu-item-simple">
+                                    <span>Eau pétillante</span>
+                                    <span>2 000<small>F</small></span>
+                                </div>
+                                <div class="menu-item-simple">
+                                    <span>Café</span>
+                                    <span>2 000<small>F</small></span>
+                                </div>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
                         </div>
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Salade Fraîche</h4>
-                                <p>Légumes croquants de saison</p>
+                        <div class="menu-column">
+                            <h4 class="menu-column-title">Desserts</h4>
+                            <div class="menu-list-simple">
+                                <div class="menu-item-simple highlight-dessert">
+                                    <span>Tiramisu</span>
+                                    <span>6 500<small>F</small></span>
+                                </div>
                             </div>
-                            <div class="menu-item-price">--<span>F</span></div>
-                        </div>
-                        <div class="menu-item">
-                            <div class="menu-item-content">
-                                <h4>Sauces Maison</h4>
-                                <p>Poivre, Béarnaise, BBQ, Signature</p>
-                            </div>
-                            <div class="menu-item-price">--<span>F</span></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="menu-cta">
-                    <a href="assets/menu/cover.jpg" class="btn-download" target="_blank">
+                    <a href="assets/menu/menu-item.jpg" class="btn-download" target="_blank">
                         <span>Voir la carte complète</span>
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6M15 3h6v6M10 14L21 3"/>
@@ -499,13 +513,13 @@
             </div>
         </div>
         <div class="gallery-cta">
-            <a href="https://www.instagram.com/lacanteen_abj/" target="_blank" rel="noopener" class="btn-instagram">
+            <a href="https://www.instagram.com/lacanteen.abj/" target="_blank" rel="noopener" class="btn-instagram">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                     <rect x="2" y="2" width="20" height="20" rx="5"/>
                     <circle cx="12" cy="12" r="4"/>
                     <circle cx="17.5" cy="6.5" r="1.5" fill="currentColor"/>
                 </svg>
-                <span>@lacanteen_abj</span>
+                <span>@lacanteen.abj</span>
             </a>
         </div>
     </section>
@@ -591,7 +605,7 @@
                     <a href="#contact">Contact</a>
                 </div>
                 <div class="footer-social">
-                    <a href="https://www.instagram.com/lacanteen_abj/" target="_blank" rel="noopener" aria-label="Instagram">
+                    <a href="https://www.instagram.com/lacanteen.abj/" target="_blank" rel="noopener" aria-label="Instagram">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                             <rect x="2" y="2" width="20" height="20" rx="5"/>
                             <circle cx="12" cy="12" r="4"/>
